--- a/app/src/main/res/layout-land/activity_signin.xml
+++ b/app/src/main/res/layout-land/activity_signin.xml
@@ -22,7 +22,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/imageView2"
             tools:ignore="ContentDescription" />
@@ -75,7 +75,8 @@
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            android:id="@+id/btnForgotpass"/>
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -89,7 +90,7 @@
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/userpassLogin"
             android:textColor="#FFF"
-            android:text="@string/btnLogin"
+            android:text="@string/signin_btnLogin"
             fontPath="fonts/Roboto-Bold.ttf"
             app:layout_constraintHorizontal_bias="0.56"
             tools:ignore="MissingPrefix"
@@ -98,9 +99,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/loginButton"
-            android:text="@string/btnSignup"
+            android:text="@string/signin_btnSignup"
             android:textColor="@color/accent"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="16dp"
@@ -109,23 +110,23 @@
             android:id="@+id/signupButton"
             android:onClick="signupActivity"
             tools:ignore="MissingPrefix" />
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/facebook_button_land"
-            android:text="@string/facebook"
-            android:textColor="@color/white_hint"
-            fontPath="fonts/Roboto-Bold.ttf"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/signupButton"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:id="@+id/facebookButton"
-            android:clickable="true"
-            tools:ignore="MissingPrefix"
-            app:layout_constraintHorizontal_bias="0.37" />
+        <!--<Button-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@drawable/facebook_button_land"-->
+            <!--android:text="@string/facebook"-->
+            <!--android:textColor="@color/white_hint"-->
+            <!--fontPath="fonts/Roboto-Bold.ttf"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/signupButton"-->
+            <!--android:layout_marginEnd="16dp"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--android:id="@+id/facebookButton"-->
+            <!--android:clickable="true"-->
+            <!--tools:ignore="MissingPrefix"-->
+            <!--app:layout_constraintHorizontal_bias="0.37" />-->
 
 
     </android.support.constraint.ConstraintLayout>
