--- a/app/src/main/res/layout-v21/activity_signup.xml
+++ b/app/src/main/res/layout-v21/activity_signup.xml
@@ -2,210 +2,165 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_signin"
+    android:id="@+id/activity_signup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.gabrielmadeira.seupedido.Signin"
-    android:orientation="vertical"
-    android:background="#F6A623">
-
+    android:background="@color/primary"
+    tools:context="com.gabrielmadeira.seupedido.Signup">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="58dp"
-            app:srcCompat="@drawable/logo_image"
-            android:id="@+id/imageView3"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp" />
-        <TextView
-            android:layout_width="239dp"
-            android:layout_height="35dp"
-            android:ems="10"
-            android:id="@+id/signup_title"
-            android:textColor="@android:color/white"
-            android:text="@string/signup_title"
-            fontPath="fonts/Roboto-Bold.ttf"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/imageView3"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintHorizontal_bias="0.46"
-            tools:ignore="MissingPrefix"
-            android:textSize="25sp" />
-        <LinearLayout
-            android:layout_width="352dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/linearLayout"
-            android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3"
+            android:src="@drawable/logo_image"
+            android:layout_alignParentTop="true"
+
+            android:id="@+id/viewLogo"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp">
-            <EditText
-                android:layout_width="184dp"
-                android:layout_height="48dp"
-                android:inputType="textEmailAddress"
-                android:ems="10"
-                android:id="@+id/userName"
-                android:textColor="@android:color/white"
-                android:hint="@string/name"
-                android:textColorHint="#FFFFFF"
-                android:backgroundTint="#FFFFFF"
-                tools:layout_editor_absoluteY="129dp"
-                tools:layout_editor_absoluteX="16dp" />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:inputType="textEmailAddress"
-                android:ems="10"
-                android:id="@+id/userSurname"
-                android:textColor="@android:color/white"
-                android:hint="@string/surname"
-                android:textColorHint="#FFFFFF"
-                android:backgroundTint="#FFFFFF"
-                tools:layout_editor_absoluteY="129dp"
-                tools:layout_editor_absoluteX="16dp" />
-        </LinearLayout>
+            app:layout_constraintLeft_toLeftOf="parent" />
         <EditText
-            android:layout_width="352dp"
-            android:layout_height="48dp"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/useremailLogin"
-            android:textColor="@android:color/white"
-            android:hint="@string/e_mail"
-            android:textColorHint="#FFFFFF"
-            android:backgroundTint="#FFFFFF"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            android:layout_width="159dp"
+            android:layout_height="40dp"
+            android:drawableStart="@drawable/ic_person_black_24dp"
+            android:textSize="14sp"
+            android:textColor="@color/white_hint"
+            android:textColorHint="@color/white_hint"
+            android:hint="@string/name"
+            android:drawablePadding="9dp"
+            fontPath="fonts/Roboto-Regular.ttf"
+            tools:ignore="MissingPrefix"
+            android:id="@+id/userName"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/viewLogo"
             android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp" />
-
+            app:layout_constraintLeft_toLeftOf="parent" />
         <EditText
-            android:layout_width="352dp"
-            android:layout_height="41dp"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/userPassword"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
+            android:layout_width="147dp"
+            android:layout_height="40dp"
+            android:drawableStart="@drawable/ic_people_black_24dp"
+            android:textSize="14sp"
+            android:textColor="@color/white_hint"
+            android:textColorHint="@color/white_hint"
+            android:hint="@string/surname"
+            android:drawablePadding="10dp"
+            fontPath="fonts/Roboto-Regular.ttf"
+            tools:ignore="MissingPrefix"
+            android:id="@+id/userSurname"
             android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/useremailLogin"
-            android:hint="@string/password"
-            android:textColorHint="#FFFFFF"
-            android:backgroundTint="#FFFFFF"
-            />
-
+            app:layout_constraintLeft_toRightOf="@+id/userName"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/viewLogo" />
         <EditText
-            android:layout_width="352dp"
-            android:layout_height="41dp"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/userpasswordconfimation"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/userPassword"
-            android:hint="@string/password_confirmation"
-            android:textColorHint="#FFFFFF"
-            android:backgroundTint="#FFFFFF"
-            />
-
-
-        <Button
-            android:text="@string/signup_btnSignup"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/btnSignup"
-            android:layout_marginTop="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/userpasswordconfimation"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:background="@color/primary_dark"
-            android:textColor="@android:color/white"
-            android:onClick="login"
-            fontPath="fonts/Roboto-Bold.ttf"
-            tools:ignore="MissingPrefix"
-            android:elevation="10dp"/>
-
-        <TextView
-            android:text="@string/signup_btnLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnLogin"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/btnSignup"
+            android:textSize="@dimen/text_size"
+            android:id="@+id/userEmail"
+            android:inputType="textEmailAddress"
             android:textColor="@color/accent"
-            android:textStyle="normal|bold"
-            android:clickable="true"
-            fontPath="fonts/Roboto-Bold.ttf"
-            tools:ignore="MissingPrefix"
-            android:onClick="signinActivity" />
-
-        <TextView
-            android:text="@string/forgotPassord"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnForgotpass"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="16dp"
+            android:hint="@string/e_mail"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
-            android:textColor="@android:color/background_light"
-            android:clickable="true"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            fontPath="fonts/Roboto-Regular.ttf"
+            android:drawableStart="@drawable/ic_email_black_24dp"
+            android:drawablePadding="10dp"
+            tools:ignore="MissingPrefix"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/userName" />
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size"
+            android:inputType="textPassword"
+            android:hint="@string/password"
+            android:textColor="@color/white_hint"
+            android:textColorHint="#FFF"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userEmail"
+            andfontPath="fonts/Roboto-Regular.ttf"
+            android:id="@+id/userPassword"
+            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
+            android:drawablePadding="10dp"
+            tools:ignore="MissingPrefix"
+            android:layout_marginTop="8dp" />
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size"
+            android:inputType="textPassword"
+            android:hint="@string/password_confirmation"
+            android:textColor="@color/white_hint"
+            android:textColorHint="#FFF"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userPassword"
+            andfontPath="fonts/Roboto-Regular.ttf"
+            android:id="@+id/userPasswordconfirmation"
+            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
+            android:drawablePadding="10dp"
+            tools:ignore="MissingPrefix"
+            android:layout_marginTop="8dp" />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/primary_dark"
+            android:elevation="4dp"
+            android:id="@+id/loginButton"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/userPasswordconfirmation"
+            android:textColor="#FFF"
+            android:text="@string/signup_btnSignup"
+            fontPath="fonts/Roboto-Bold.ttf"
+            app:layout_constraintHorizontal_bias="1.0"
+            tools:ignore="MissingPrefix"
+            android:onClick="signup"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/loginButton"
+            android:text="@string/signup_btnLogin"
+            android:textColor="@color/accent"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            fontPath="fonts/Roboto-Bold.ttf"
+            android:id="@+id/signupButton"
+            android:onClick="signinActivity"
+            tools:ignore="MissingPrefix" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/forgotPassord"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-            app:layout_constraintVertical_bias="0.93" />
-
-
-
-
-
+            android:id="@+id/btnForgotpass"/>
     </android.support.constraint.ConstraintLayout>
-
-
-
 </RelativeLayout>
