--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -88,7 +88,7 @@
             android:layout_marginTop="40dp"
             app:layout_constraintTop_toBottomOf="@+id/userpassLogin"
             android:textColor="#FFF"
-            android:text="@string/btnLogin"
+            android:text="@string/signin_btnLogin"
             fontPath="fonts/Roboto-Bold.ttf"
             app:layout_constraintHorizontal_bias="1.0"
             tools:ignore="MissingPrefix"
@@ -97,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/loginButton"
-            android:text="@string/btnSignup"
+            android:text="@string/signin_btnSignup"
             android:textColor="@color/accent"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
@@ -105,6 +105,7 @@
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             fontPath="fonts/Roboto-Bold.ttf"
+            tools:ignore="MissingPrefix"
             android:id="@+id/signupButton"
             android:onClick="signupActivity"/>
         <Button
@@ -122,6 +123,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/facebookButton"
             android:clickable="true"
+            android:alpha="0"
             />
 
 
