--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -22,42 +22,148 @@
             android:layout_alignParentTop="true"
 
             android:id="@+id/viewLogo"
-            android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+            <EditText
+                android:layout_width="159dp"
+                android:layout_height="40dp"
+                android:drawableStart="@drawable/ic_person_black_24dp"
+                android:textSize="14sp"
+                android:textColor="@color/white_hint"
+                android:textColorHint="@color/white_hint"
+                android:text="@string/name"
+                android:drawablePadding="9dp"
+                fontPath="fonts/Roboto-Regular.ttf"
+                tools:ignore="MissingPrefix"
+                android:id="@+id/userName"
+                android:layout_marginTop="48dp"
+                app:layout_constraintTop_toBottomOf="@+id/viewLogo"
+                android:layout_marginStart="16dp"
+                app:layout_constraintLeft_toLeftOf="parent" />
+            <EditText
+                android:layout_width="147dp"
+                android:layout_height="40dp"
+                android:drawableStart="@drawable/ic_people_black_24dp"
+                android:textSize="14sp"
+                android:textColor="@color/white_hint"
+                android:textColorHint="@color/white_hint"
+                android:text="@string/surname"
+                android:drawablePadding="10dp"
+                fontPath="fonts/Roboto-Regular.ttf"
+                tools:ignore="MissingPrefix"
+                android:id="@+id/userSurname"
+                android:layout_marginTop="48dp"
+                app:layout_constraintTop_toBottomOf="@+id/viewLogo"
+                android:layout_marginStart="8dp"
+                app:layout_constraintLeft_toRightOf="@+id/userName"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_bias="0.25" />
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size"
+            android:id="@+id/userEmail"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/accent"
+            android:hint="@string/e_mail"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-            <LinearLayout
-                android:layout_width="368dp"
-                android:layout_height="wrap_content"
-                tools:layout_editor_absoluteX="8dp"
-                android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@+id/viewLogo"
-                android:layout_marginTop="40dp">
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_person_black_24dp"
-                        android:textSize="14sp"
-                        android:textColor="@color/white_hint"
-                        android:textColorHint="@color/white_hint"
-                        android:text="@string/name"
-                        android:drawablePadding="10dp"
-                        fontPath="fonts/Roboto-Regular.ttf"
-                        tools:ignore="MissingPrefix"
-                        android:id="@+id/userName"/>
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableStart="@drawable/ic_people_black_24dp"
-                        android:textSize="14sp"
-                        android:textColor="@color/white_hint"
-                        android:textColorHint="@color/white_hint"
-                        android:text="@string/surname"
-                        android:drawablePadding="10dp"
-                        fontPath="fonts/Roboto-Regular.ttf"
-                        tools:ignore="MissingPrefix"
-                        android:id="@+id/userSurname"/>
-            </LinearLayout>
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            fontPath="fonts/Roboto-Regular.ttf"
+            android:drawableStart="@drawable/ic_email_black_24dp"
+            android:drawablePadding="10dp"
+            tools:ignore="MissingPrefix"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/userName" />
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size"
+            android:inputType="textPassword"
+            android:hint="@string/password"
+            android:textColor="@color/white_hint"
+            android:textColorHint="#FFF"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userEmail"
+            andfontPath="fonts/Roboto-Regular.ttf"
+            android:id="@+id/userPassword"
+            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
+            android:drawablePadding="10dp"
+            tools:ignore="MissingPrefix"
+            android:layout_marginTop="8dp" />
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size"
+            android:inputType="textPassword"
+            android:hint="@string/password_confirmation"
+            android:textColor="@color/white_hint"
+            android:textColorHint="#FFF"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userPassword"
+            andfontPath="fonts/Roboto-Regular.ttf"
+            android:id="@+id/userPasswordconfirmation"
+            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
+            android:drawablePadding="10dp"
+            tools:ignore="MissingPrefix"
+            android:layout_marginTop="8dp" />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/primary_dark"
+            android:elevation="4dp"
+            android:id="@+id/Button"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/userPasswordconfirmation"
+            android:textColor="#FFF"
+            android:text="@string/signup_btnSignup"
+            fontPath="fonts/Roboto-Bold.ttf"
+            app:layout_constraintHorizontal_bias="1.0"
+            tools:ignore="MissingPrefix"
+            android:onClick="signup"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/loginButton"
+            android:text="@string/signup_btnLogin"
+            android:textColor="@color/accent"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            fontPath="fonts/Roboto-Bold.ttf"
+            android:id="@+id/signupButton"
+            android:onClick="signinActivity"
+            tools:ignore="MissingPrefix" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/forgotPassord"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:id="@+id/btnForgotpass"/>
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
