--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,13 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/blue_accent</item>
         <item name="android:colorBackground">@color/background_material_light</item>
+
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_sini</item>
+        <item name="android:scaleType">centerCrop</item>
+
+    </style>
 
 </resources>
