--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_signup"
     android:layout_width="match_parent"
@@ -8,6 +9,141 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/primary"
     tools:context="com.gabrielmadeira.seupedido.Signup">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/logo_image"
+            android:layout_alignParentTop="true"
+            android:id="@+id/viewLogo"
+            tools:layout_editor_absoluteY="6dp"
+            tools:layout_editor_absoluteX="253dp" />
+        <EditText
+            android:layout_width="133dp"
+            android:layout_height="40dp"
+            android:drawableStart="@drawable/ic_person_black_24dp"
+            android:textSize="@dimen/text_size_land_signup"
+            android:textColor="@color/white_hint"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
+            android:hint="@string/name"
+            android:drawablePadding="9dp"
+            fontPath="fonts/Roboto-Regular.ttf"
+            tools:ignore="MissingPrefix"
+            android:id="@+id/signup_userName"
+            tools:layout_editor_absoluteY="105dp"
+            tools:layout_editor_absoluteX="16dp" />
+        <EditText
+            android:layout_width="147dp"
+            android:layout_height="40dp"
+            android:drawableStart="@drawable/ic_people_black_24dp"
+            android:textSize="@dimen/text_size_land_signup"
+            android:textColor="@color/white_hint"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
+            android:hint="@string/surname"
+            android:drawablePadding="10dp"
+            fontPath="fonts/Roboto-Regular.ttf"
+            tools:ignore="MissingPrefix"
+            android:id="@+id/signup_userSurname"
+            tools:layout_editor_absoluteX="192dp"
+            tools:layout_editor_absoluteY="105dp" />
+        <EditText
+            android:layout_width="204dp"
+            android:layout_height="40dp"
+            android:textSize="@dimen/text_size_land_signup"
+            android:id="@+id/signup_userEmail"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/accent"
+            android:hint="@string/e_mail"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
+            fontPath="fonts/Roboto-Regular.ttf"
+            android:drawableStart="@drawable/ic_email_black_24dp"
+            android:drawablePadding="10dp"
+            tools:ignore="MissingPrefix"
+            tools:layout_editor_absoluteY="105dp"
+            tools:layout_editor_absoluteX="360dp" />
+        <EditText
+            android:layout_width="133dp"
+            android:layout_height="42dp"
+            android:textSize="@dimen/text_size_land_signup"
+            android:inputType="textPassword"
+            android:hint="@string/password"
+            android:textColor="@color/white_hint"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
+            andfontPath="fonts/Roboto-Regular.ttf"
+            android:id="@+id/signup_userPassword"
+            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
+            android:drawablePadding="10dp"
+            tools:ignore="MissingPrefix"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="166dp" />
+        <EditText
+            android:layout_width="147dp"
+            android:layout_height="42dp"
+            android:textSize="@dimen/text_size_land_signup"
+            android:inputType="textPassword"
+            android:hint="@string/password_confirmation"
+            android:textColor="@color/white_hint"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
+            andfontPath="fonts/Roboto-Regular.ttf"
+            android:id="@+id/signup_userPasswordconfirmation"
+            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
+            android:drawablePadding="10dp"
+            tools:ignore="MissingPrefix"
+            tools:layout_editor_absoluteX="192dp"
+            tools:layout_editor_absoluteY="166dp" />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/primary_dark"
+            android:elevation="4dp"
+            android:id="@+id/signup_signupButton"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textColor="#FFF"
+            android:text="@string/signup_btnSignup"
+            fontPath="fonts/Roboto-Bold.ttf"
+            tools:ignore="MissingPrefix"
+            android:onClick="signup"
+            tools:layout_editor_absoluteY="222dp"
+            app:layout_constraintHorizontal_bias="0.33" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/signup_signupButton"
+            android:text="@string/signup_btnLogin"
+            android:textColor="@color/accent"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            fontPath="fonts/Roboto-Bold.ttf"
+            android:id="@+id/signup_signinButton"
+            android:onClick="signinActivity"
+            tools:ignore="MissingPrefix" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/forgotPassord"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp"
+            android:id="@+id/signup_btnForgotpass"/>
+    </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
