--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -20,7 +20,6 @@
             android:layout_height="wrap_content"
             android:src="@drawable/logo_image"
             android:layout_alignParentTop="true"
-
             android:id="@+id/viewLogo"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="24dp"
@@ -28,46 +27,48 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent" />
-            <EditText
-                android:layout_width="159dp"
-                android:layout_height="40dp"
-                android:drawableStart="@drawable/ic_person_black_24dp"
-                android:textSize="14sp"
-                android:textColor="@color/white_hint"
-                android:textColorHint="@color/white_hint"
-                android:text="@string/name"
-                android:drawablePadding="9dp"
-                fontPath="fonts/Roboto-Regular.ttf"
-                tools:ignore="MissingPrefix"
-                android:id="@+id/userName"
-                android:layout_marginTop="48dp"
-                app:layout_constraintTop_toBottomOf="@+id/viewLogo"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
-            <EditText
-                android:layout_width="147dp"
-                android:layout_height="40dp"
-                android:drawableStart="@drawable/ic_people_black_24dp"
-                android:textSize="14sp"
-                android:textColor="@color/white_hint"
-                android:textColorHint="@color/white_hint"
-                android:text="@string/surname"
-                android:drawablePadding="10dp"
-                fontPath="fonts/Roboto-Regular.ttf"
-                tools:ignore="MissingPrefix"
-                android:id="@+id/userSurname"
-                android:layout_marginTop="48dp"
-                app:layout_constraintTop_toBottomOf="@+id/viewLogo"
-                android:layout_marginStart="8dp"
-                app:layout_constraintLeft_toRightOf="@+id/userName"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.25" />
+        <EditText
+            android:layout_width="159dp"
+            android:layout_height="40dp"
+            android:drawableStart="@drawable/ic_person_black_24dp"
+            android:textSize="14sp"
+            android:textColor="@color/white_hint"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
+            android:hint="@string/name"
+            android:drawablePadding="9dp"
+            fontPath="fonts/Roboto-Regular.ttf"
+            tools:ignore="MissingPrefix"
+            android:id="@+id/signup_userName"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/viewLogo"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
+        <EditText
+            android:layout_width="147dp"
+            android:layout_height="40dp"
+            android:drawableStart="@drawable/ic_people_black_24dp"
+            android:textSize="14sp"
+            android:textColor="@color/white_hint"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
+            android:hint="@string/surname"
+            android:drawablePadding="10dp"
+            fontPath="fonts/Roboto-Regular.ttf"
+            tools:ignore="MissingPrefix"
+            android:id="@+id/signup_userSurname"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/viewLogo"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/signup_userName"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.25" />
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="@dimen/text_size"
-            android:id="@+id/userEmail"
+            android:id="@+id/signup_userEmail"
             android:inputType="textEmailAddress"
             android:textColor="@color/accent"
             android:hint="@string/e_mail"
@@ -82,7 +83,7 @@
             android:drawablePadding="10dp"
             tools:ignore="MissingPrefix"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/userName" />
+            app:layout_constraintTop_toBottomOf="@+id/signup_userName" />
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -90,14 +91,15 @@
             android:inputType="textPassword"
             android:hint="@string/password"
             android:textColor="@color/white_hint"
-            android:textColorHint="#FFF"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userEmail"
+            app:layout_constraintTop_toBottomOf="@+id/signup_userEmail"
             andfontPath="fonts/Roboto-Regular.ttf"
-            android:id="@+id/userPassword"
+            android:id="@+id/signup_userPassword"
             android:drawableStart="@drawable/ic_vpn_key_black_24dp"
             android:drawablePadding="10dp"
             tools:ignore="MissingPrefix"
@@ -109,14 +111,15 @@
             android:inputType="textPassword"
             android:hint="@string/password_confirmation"
             android:textColor="@color/white_hint"
-            android:textColorHint="#FFF"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userPassword"
+            app:layout_constraintTop_toBottomOf="@+id/signup_userPassword"
             andfontPath="fonts/Roboto-Regular.ttf"
-            android:id="@+id/userPasswordconfirmation"
+            android:id="@+id/signup_userPasswordconfirmation"
             android:drawableStart="@drawable/ic_vpn_key_black_24dp"
             android:drawablePadding="10dp"
             tools:ignore="MissingPrefix"
@@ -126,13 +129,13 @@
             android:layout_height="wrap_content"
             android:background="@color/primary_dark"
             android:elevation="4dp"
-            android:id="@+id/Button"
+            android:id="@+id/signup_signupButton"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/userPasswordconfirmation"
+            app:layout_constraintTop_toBottomOf="@+id/signup_userPasswordconfirmation"
             android:textColor="#FFF"
             android:text="@string/signup_btnSignup"
             fontPath="fonts/Roboto-Bold.ttf"
@@ -142,7 +145,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/loginButton"
+            app:layout_constraintTop_toBottomOf="@+id/signup_signupButton"
             android:text="@string/signup_btnLogin"
             android:textColor="@color/accent"
             android:layout_marginTop="24dp"
@@ -151,7 +154,7 @@
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             fontPath="fonts/Roboto-Bold.ttf"
-            android:id="@+id/signupButton"
+            android:id="@+id/signup_signinButton"
             android:onClick="signinActivity"
             tools:ignore="MissingPrefix" />
         <TextView
@@ -164,6 +167,6 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
-            android:id="@+id/btnForgotpass"/>
+            android:id="@+id/signup_btnForgotpass"/>
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
