--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -13,7 +13,8 @@
     tools:context="com.gabrielmadeira.seupedido.Signin">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/constraint_layout">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,7 +25,7 @@
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="64dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/imageView2"
+            android:id="@+id/logo"
             tools:ignore="ContentDescription" />
 
         <EditText
@@ -43,7 +44,7 @@
             app:layout_constraintRight_toRightOf="parent"
             fontPath="fonts/Roboto-Regular.ttf"
             android:layout_marginTop="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            app:layout_constraintTop_toBottomOf="@+id/logo"
             app:layout_constraintHorizontal_bias="0.4"
             android:drawableStart="@drawable/ic_email_black_24dp"
             android:drawablePadding="10dp"
@@ -55,7 +56,8 @@
             android:inputType="textPassword"
             android:hint="@string/password"
             android:textColor="@color/white_hint"
-            android:textColorHint="#FFF"
+            android:textColorHint="@color/white_hint"
+            android:backgroundTint="@color/white_hint"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginStart="16dp"
