--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -22,8 +22,14 @@
             android:src="@drawable/logo_image"
             android:layout_alignParentTop="true"
             android:id="@+id/viewLogo"
-            tools:layout_editor_absoluteY="6dp"
-            tools:layout_editor_absoluteX="253dp" />
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:contentDescription=""
+            tools:ignore="ContentDescription" />
         <EditText
             android:layout_width="133dp"
             android:layout_height="40dp"
@@ -37,10 +43,12 @@
             fontPath="fonts/Roboto-Regular.ttf"
             tools:ignore="MissingPrefix"
             android:id="@+id/signup_userName"
-            tools:layout_editor_absoluteY="105dp"
-            tools:layout_editor_absoluteX="16dp" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/viewLogo" />
         <EditText
-            android:layout_width="147dp"
+            android:layout_width="163dp"
             android:layout_height="40dp"
             android:drawableStart="@drawable/ic_people_black_24dp"
             android:textSize="@dimen/text_size_land_signup"
@@ -52,8 +60,10 @@
             fontPath="fonts/Roboto-Regular.ttf"
             tools:ignore="MissingPrefix"
             android:id="@+id/signup_userSurname"
-            tools:layout_editor_absoluteX="192dp"
-            tools:layout_editor_absoluteY="105dp" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toRightOf="@+id/signup_userName"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/viewLogo" />
         <EditText
             android:layout_width="204dp"
             android:layout_height="40dp"
@@ -68,8 +78,13 @@
             android:drawableStart="@drawable/ic_email_black_24dp"
             android:drawablePadding="10dp"
             tools:ignore="MissingPrefix"
-            tools:layout_editor_absoluteY="105dp"
-            tools:layout_editor_absoluteX="360dp" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toRightOf="@+id/signup_userSurname"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.13"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/viewLogo" />
         <EditText
             android:layout_width="133dp"
             android:layout_height="42dp"
@@ -79,15 +94,17 @@
             android:textColor="@color/white_hint"
             android:textColorHint="@color/white_hint"
             android:backgroundTint="@color/white_hint"
-            andfontPath="fonts/Roboto-Regular.ttf"
+            fontPath="fonts/Roboto-Regular.ttf"
             android:id="@+id/signup_userPassword"
             android:drawableStart="@drawable/ic_vpn_key_black_24dp"
             android:drawablePadding="10dp"
             tools:ignore="MissingPrefix"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="166dp" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_userName" />
         <EditText
-            android:layout_width="147dp"
+            android:layout_width="163dp"
             android:layout_height="42dp"
             android:textSize="@dimen/text_size_land_signup"
             android:inputType="textPassword"
@@ -95,13 +112,15 @@
             android:textColor="@color/white_hint"
             android:textColorHint="@color/white_hint"
             android:backgroundTint="@color/white_hint"
-            andfontPath="fonts/Roboto-Regular.ttf"
+            fontPath="fonts/Roboto-Regular.ttf"
             android:id="@+id/signup_userPasswordconfirmation"
             android:drawableStart="@drawable/ic_vpn_key_black_24dp"
             android:drawablePadding="10dp"
             tools:ignore="MissingPrefix"
-            tools:layout_editor_absoluteX="192dp"
-            tools:layout_editor_absoluteY="166dp" />
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toRightOf="@+id/signup_userPassword"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_userSurname" />
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -117,8 +136,8 @@
             fontPath="fonts/Roboto-Bold.ttf"
             tools:ignore="MissingPrefix"
             android:onClick="signup"
-            tools:layout_editor_absoluteY="222dp"
-            app:layout_constraintHorizontal_bias="0.33" />
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/signup_userPasswordconfirmation" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
